# VisitorPattern

./: .gitignore  CMakeLists.txt  base.hpp  iterator.hpp  visitor.hpp
composite/header/: add.hpp  div.hpp  mult.hpp  op.hpp  pow.hpp  rand.hpp  sub.hpp
composite/src/: add.cpp  div.cpp  mult.cpp  op.cpp  pow.cpp  rand.cpp  sub.cpp
tests/: add_test.hpp  div_test.hpp  integrationtest.hpp  mult_test.hpp  op_test.hpp  pow_test.hpp  sub_test.hpp  unit_test.cpp
